[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermopro-tp90x"
version = "0.1.0"
description = "BLE protocol library for ThermoPro TP90x thermometers."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Petr Kracik" },
]
maintainers = [
  { name = "Dermot Daly" },
]
keywords = ["ble", "bluetooth", "thermometer", "thermopro", "tp90x", "tp902", "tp904"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = []

[project.optional-dependencies]
bleak = ["bleak>=0.22"]
docs = [
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=2.0.0",
  "myst-parser>=2.0.0",
  "linkify-it-py>=2.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
